# FLAMAPP-

./: .gitignore  LICENSE  README.md  gradlew  gradlew.bat  settings.gradle
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  OPENCV_LIBRARY_SETUP.md  SETUP_OPENCV_HEADERS.md  edge_detector.cpp  edge_detector.h  native_processor.cpp
app/src/main/cpp/include/: .gitkeep  README.md
app/src/main/java/com/assessment/edgedetection/: MainActivity.kt
app/src/main/java/com/assessment/edgedetection/camera/: CameraHandler.kt
app/src/main/java/com/assessment/edgedetection/gl/: GLRenderer.kt
app/src/main/java/com/assessment/edgedetection/jni/: NativeProcessor.kt
app/src/main/java/com/assessment/edgedetection/utils/: FPSCounter.kt
app/src/main/jniLibs/: README.md
app/src/main/res/drawable/: ic_launcher_foreground.xml  ic_launcher_simple.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
opencv/: AndroidManifest.xml  DOWNLOAD_INSTRUCTIONS.md  README.md  build.gradle
web/: README.md  package-lock.json  package.json  start-server.bat
web/src/: FrameViewer.ts  main.ts  types.ts
